# BuaaCompiler

./: README.md
compiler/: 16061075_test.txt  CMakeLists.txt  Compiler.cpp  Compiler.h  Error.cpp  Error.h  Lexer.cpp  Lexer.h  MidCode.cpp  MidCode.h  MipsCode.cpp  MipsCode.h  Optimization.cpp  Optimization.h  SymbolTab.cpp  SymbolTab.h  Syntax.cpp  Syntax.h  definition.h  main.cpp  mips.asm  test1.txt  test2.txt  test3.txt  test_wf.txt  test_zzf.txt
test/: CMakeLists.txt  WF.cpp  WF.h
文法解读/: 16061075_result.txt  16061075_test.txt  16061075_黄霁昀_文法解读.docx
源码阅读与分析/: PascalS.pas  pl0.pas
设计文档/: 16061075_黄霁昀_设计文档.docx
词法分析/: 16061075_test.txt  16061075_黄霁昀_词法分析结果.docx
词法分析/WordAnalyze/: CMakeLists.txt  Lexer.h  definition.h  lexer.cpp
语法分析/: 16061075_黄霁昀_语法分析结果.docx
